--- a/base_app/pubspec.yaml
+++ b/base_app/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
     path: ../micro_core
   micro_app_onboarding:
     path: ../micro_app_onboarding
+  micro_commons_user:
+    path: ../micro_commons_user
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
