--- a/micro_commons/pubspec_old.yaml
+++ b/micro_commons/pubspec_old.yaml
@@ -2,14 +2,15 @@ name: micro_commons
 description: A new Flutter package project.
 version: 0.0.1
 homepage:
-publish_to: 'none'
+publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 environment:
-  sdk: '>=3.1.3 <4.0.0'
+  sdk: '>=3.0.6 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  
   micro_core:
     path: ../micro_core
   micro_commons_user:
