--- a/base_app/pubspec.yaml
+++ b/base_app/pubspec.yaml
@@ -43,14 +43,20 @@ dependencies:
     path: ../micro_app_home
   micro_app_profile:
     path: ../micro_app_profile  
+  micro_app_extract:
+    path: ../micro_app_extract
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_localizations:
+    sdk: flutter
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -71,7 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - files/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
