--- a/base_app/pubspec.yaml
+++ b/base_app/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
     path: ../micro_app_profile  
   micro_app_extract:
     path: ../micro_app_extract
+  micro_app_pix:
+    path: ../micro_app_pix
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
