--- a/base_app/pubspec.yaml
+++ b/base_app/pubspec.yaml
@@ -35,7 +35,9 @@ dependencies:
     path: ../micro_core
 
 
-  
+  micro_commons_user:
+    path: ../micro_commons_user
+    
   micro_app_onboarding:
     path: ../micro_app_onboarding
   micro_app_home:
